@@ -28,6 +28,7 @@ set(openbabel_srcs
     chiral.cpp
     data.cpp
     descriptor.cpp
+    dock.cpp
     fingerprint.cpp
     forcefield.cpp
     format.cpp
